--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
+locale                   : "Korea"
+title                    : "Park, Jun Hyeok's Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Park, Jun Hyeok"
 description              : &description "personal description"
 url                      : https://junhyeok101.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -21,14 +21,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "images/mstile-310x150.png"
+  name             : "Park, Jun Hyeok"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "aea898@yonsei.ac.kr" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -55,7 +55,7 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : # Username
+  instagram        : \#Junhyeok101
   lastfm           : # Username
   linkedin         : # Username
   mastodon         : # URL
