--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,5 +23,5 @@ main:
   - title: "CV"
     url: /files/CV_park.pdf
     
-  #- title: "Guide"
-    #url: /markdown/
+  - title: "Publications"
+    url: /publications/
