--- a/_config.yml
+++ b/_config.yml
@@ -74,9 +74,9 @@ author:
   zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
-publication_category:
+project_category:
   books:
-    title: 'Books'
+    title: 'lotto'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
