--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "park.jpg"
   name             : "Park, Jun Hyeok"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "never give up"
   location         : "Seoul, Repulic of Korea"
   employer         : "Yonsei University"
   uri              : # URL
