--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Park, Jun Hyeok"
   pronouns         : # example: "she/her"  
   location         : "Seoul, Repulic of Korea"
-  bio              : "never give up"
+  bio              : "Building the future, one step at a time"
   employer         : "Yonsei University"
   uri              : # URL
   email            : "aea898@yonsei.ac.kr" 
